# portfolio-backend

./: .env  .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 748038ae2a53_create_interview_questions_table.py  c43e3b4946ec_add_projects_table.py  c77d8a884f0b_add_projects_table.py  d3c76152db5f_add_about_table.py  e32754077b03_add_projects_table.py
app/: main.py
app/api/v1/: about.py  interview_questions.py  projects.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  about.py  interview_question.py  project.py
app/schemas/: __init__.py  about.py  interview_question.py  project.py
app/services/: __init__.py  about.py  interview_question.py  project.py
scripts/: seed_data.py
